# servidor-reconstrucao-ultrassom

./: .gitignore  README.md
Dados/: validar.py
Img1/: G-1.npy  H-1.npy
server-c++/: CMakeLists.txt  converter.py  servidor.cpp  teste_operacoes.cpp
server-java/: pom.xml
server-java/src/main/java/: TesteOperacoes.java
server-python/: cliente.py  servidor.py  servidor_numPy.py  servidor_pure.py  teste_operacoes.py
